--- a/css/main.css
+++ b/css/main.css
@@ -27,22 +27,14 @@ h4 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
-h1 {
-	font-size: 1.875em;
-}
-h2 {
-    font-size: 1.5em;
-}
-h3 {
-	font-size: 1.125em;
-}
-h4 {
-	font-size: .75em;
-}
 
 p {
 	font-size: .875em;
 	line-height: 1.3125em;
+}
+
+ul {
+	margin: 0;
 }
 
 /*The widths are in a percentage!*/
@@ -122,7 +114,6 @@ header nav ul li a{
 .section-one,
 .section-two,
 .section-three {
-	height: auto;
 	flex: 100%;
 	border-top: 1px solid #eee;
 }
@@ -162,4 +153,37 @@ footer span {
 	text-transform: lowercase;
 	color: #77a466;
 	font-size: .875em;
+}
+
+@media only screen and (min-width: 768px) {
+	.bottom-section {
+		justify-content: space-between;
+		align-items: flex-start;
+		border-top: 1px solid #eee;
+	}
+
+	.section-one,
+	.section-two,
+	.section-three {
+		border-top: none;
+		flex-basis: 30%;
+	}
+
+	.section-two {
+		border-left: 1px solid #eee;
+		border-right: 1px solid #eee;
+		padding: 0 20px;
+	}
+
+	.section-three {
+		padding-left: 20px;
+	}
+}
+
+@media all and (min-width: 1200px) {
+	header nav ul {
+		display: flex;
+		justify-content: space-between;
+	}
+
 }
